[package]
name = "jmespatch-cli"
version = "0.3.0"
authors = ["Michael Dowling <mtdowling@gmail.com>"]
license = "MIT"
edition = "2018"

[[bin]]
name = "jp"
path = "src/main.rs"

[dependencies]
serde = "1"
serde_json = "1"
clap = "2.33"
jmespath = {package = "jmespatch", version = "0.3", path = "../jmespath"}
